# template-switch-generator

./: .gitignore  Cargo.toml
src/: choose_alphabet_and_n.rs  error.rs  main.rs  n_gram_model.rs
src/cli/: mod.rs
src/n_gram_model/: mod.rs  serde.rs
src/sequence_modifier/: mod.rs  template_switch_overlap_detector.rs
test_files/: .gitignore  a-bias.fa  a.fa  simple.1000.fa  simple.fa  with_lower_case_and_invalid.fa
