[package]
name = "tsgen"
description = "A random genome generator that generates template switches."
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
repository = "https://github.com/sebschmi/template-switch-generator"
version = "0.2.1"
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
compact-genome = { version = "10.0.2", features = ["io", "serde", "rand"] }
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
ciborium = "0.2.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
log = "0.4.22"
simplelog = "0.12.2"
